initial commit, creating project

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,17 @@
 *.exe
 *.out
 *.app
+/please_work_youtube.sln
+/please_work_youtube.vcxproj.filters
+/please_work_youtube.vcxproj.user
+/please_work_youtube.vcxproj
+/x64/Debug
+/please_w.c08c66b0/x64/Debug
+/please_w.c08c66b0/Debug
+/Debug
+/.vs/please_work_youtube/v17
+/.vs/please_work_youtube/FileContentIndex/0985b11e-c703-4939-9fda-d84ca99b394e.vsidx
+/.vs/please_work_youtube/FileContentIndex/2722bade-0300-46e1-a957-b964d52aa692.vsidx
+/.vs/please_work_youtube/FileContentIndex/3c1f934c-48ba-483c-98ac-422aca569a42.vsidx
+/.vs/please_work_youtube/FileContentIndex/af33f8e4-4f9d-4eb2-b914-e9e3279c2504.vsidx
+/.vs/please_work_youtube/FileContentIndex/c41cdee6-723d-4913-b440-947e184a4590.vsidx
