--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@
 /.vs/please_work_youtube/FileContentIndex/3c1f934c-48ba-483c-98ac-422aca569a42.vsidx
 /.vs/please_work_youtube/FileContentIndex/af33f8e4-4f9d-4eb2-b914-e9e3279c2504.vsidx
 /.vs/please_work_youtube/FileContentIndex/c41cdee6-723d-4913-b440-947e184a4590.vsidx
+/Linking
+/.vs
